--- a/kucunbao/index.html
+++ b/kucunbao/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div style="font-size:26px;margin-top:100px">
-<a href="itms-services://?action=download-manifest&url=https://molon.github.io/install/InventoryTool.plist">库存宝</a>
+<a href="itms-services://?action=download-manifest&url=https://molonipa.github.io/install/InventoryTool.plist">库存宝</a>
 </div>
 </body>
 </html>
