--- a/index.html
+++ b/index.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>丢饭手册</title>
+    <meta name="apple-itunes-app" content="app-id=963056590" affiliate-data="11lLuB">
+    <link href="favicons/favicon_180.png" rel="shortcut icon">
+    <style type="text/css">
+    a {
+        text-decoration: none;
+        border: 0px;
+    }
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="DIUFAN.COM" />
-    <title>未完成</title>
-  </head>
+    a:link, a:visited {
+        color: #666;
+    }
 
-  <body>
-
-      <p>未完成，敬请期待</p>
-
-  </body>
+    #followUs p {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-size: .65em;
+        font-weight: 600;
+    }
+    </style>
+</head>
+<body style="background-color: rgba(204, 204, 204, 0.28);">
+    <center>
+        <div>
+            <a href="https://itunes.apple.com/app/guai-wu-dan-zhu-shou-ce/id963056590">
+                <img src="images/appstore@2x.png" width="154" height="52" alt="Go to the App Store"/>
+            </a>
+        </div>
+        <div id="followUs">
+            <p>
+                <a href="http://molon.me/">Blog</a> /
+                <a href="mailto:dudl@qq.com">Support</a>
+            </p>
+        </div>
+        <div>
+            <video width="320" height="568" autoplay="YES" loop="YES" poster="videos/screenshot.png" >
+                <source src="videos/screenshot@2x.mp4" type="video/mp4" media="(min-device-pixel-ratio:2), (-webkit-min-device-pixel-ratio:2), (min--moz-device-pixel-ratio:2), (-o-min-device-pixel-ratio:2)" />
+                <source src="videos/screenshot@2x.mp4" type="video/mp4" media="(max-device-pixel-ratio:1), (-webkit-max-device-pixel-ratio:1), (max--moz-device-pixel-ratio:1), (-o-max-device-pixel-ratio:1)" />
+            </video>
+        </div>
+    </center>
+</body>
 </html>
