--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>丢饭手册</title>
     <meta name="apple-itunes-app" content="app-id=963056590" affiliate-data="11lLuB">
     <link href="favicons/favicon_180.png" rel="shortcut icon">
     <style type="text/css">
+    body { margin:0; padding:0; }
     a {
         text-decoration: none;
         border: 0px;
@@ -31,6 +32,9 @@
 </head>
 <body style="background-color: rgba(204, 204, 204, 0.28);">
     <center>
+        <div style="margin-top:30px;font-family:fantasy">
+            <p>丢饭手册 For 怪物弹珠</p>
+        </div>
         <div>
             <a href="https://itunes.apple.com/app/guai-wu-dan-zhu-shou-ce/id963056590">
                 <img src="images/appstore@2x.png" width="154" height="52" alt="Go to the App Store"/>
