--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <title>丢饭手册</title>
+    <title>怪物弹珠手册</title>
     <meta name="apple-itunes-app" content="app-id=963056590" affiliate-data="11lLuB">
     <link href="favicons/favicon_180.png" rel="shortcut icon">
     <style type="text/css">
