--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>怪物弹珠手册</title>
     <meta name="apple-itunes-app" content="app-id=963056590" affiliate-data="11lLuB">
+    <meta name="baidu-site-verification" content="HCr0fLSwiE" />
     <link href="favicons/favicon_180.png" rel="shortcut icon">
     <style type="text/css">
     body { margin:0; padding:0; }
