添加关键字

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>怪物弹珠手册</title>
     <meta name="apple-itunes-app" content="app-id=963056590" affiliate-data="11lLuB">
     <meta name="baidu-site-verification" content="HCr0fLSwiE" />
+    <meta name="keywords" content="怪物弹珠,怪物弹珠攻略,怪物弹珠图鉴,怪弹手册,丢饭手册,怪物弹珠手册,丢饭手册 For 怪物弹珠" />
     <link href="favicons/favicon_180.png" rel="shortcut icon">
     <style type="text/css">
     body { margin:0; padding:0; }
