--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="followUs">
             <p>
                 <a href="http://molon.me/">Blog</a> /
-                <a href="mailto:dudl@qq.com">Support</a>
+                <a href="mailto:long.mu@qq.com">Support</a>
             </p>
         </div>
         <div>
