add android download

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         </div>
         <div>
             <a href="https://itunes.apple.com/app/guai-wu-dan-zhu-shou-ce/id963056590">
-                <img src="images/appstore@2x.png" width="154" height="52" alt="Go to the App Store"/>
+                <img src="images/global-apple-store-badge@2x.png" width="154" height="45.5" alt="Go to the App Store"/>
+            </a>
+            <a href="http://molon.u.qiniudn.com/gwdzsc1.0.0.apk">
+                <img src="images/global-google-play-badge@2x.png" width="154" height="45.5" alt="Go to the Google Play"/>
             </a>
         </div>
         <div id="followUs">
