修改用户协议

--- a/rule.html
+++ b/rule.html
@@ -6,62 +6,29 @@
 </head>
 <body>
 <div style="text-align:center"><b>用户协议</b></div>
-<br><br>
-为切实保护本应用用户隐私权，优化用户体验，本应用根据现行法规及政策，制定本《用户协议》。 本《用户协议》将详细说明本应用在获取、管理及保护用户个人信息方面的政策及措施、用户应遵守的准则等。本《用户协议》适用于本应用向您提供的所有服务，无论您是通过计算机设备、移动终端或其他设备获得的本应用服务。
-<br><br>
-<b>一、个人信息的保护</b>
-<br><br>
-本应用将尽一切合理努力保护其获得的用户个人信息。为防止用户个人信息在意外的、未经授权的情况下被非法访问、复制、修改、传送、遗失、破坏、处理或使用，本应用已经并将继续采取以下措施保护您的个人信息：
-<br>
-1）以适当的方式对用户的个人信息进行加密处理；
-<br>
-2）在适当的位置使用密码对用户个人信息进行保护；
-<br>
-3）限制对用户个人信息的访问；
-<br>
-4）其他的合理措施。
-<br><br>
-尽管已经采取了上述合理有效措施，并已经遵守了相关法律规定要求的标准，但本应用仍然无法保证您的个人信息通过不安全途径进行交流时的安全性。因此，用户个人应采取积极措施保证个人信息的安全，如：定期修改帐号密码，不将自己的帐号密码等个人信息透露给他人。
-<br><br>
-您知悉本应用提供的个人信息保护措施仅适用于本应用，一旦您离开本应用，浏览或使用其他网站、服务及内容资源，本应用即没有能力及义务保护您在本应用以外的网站提交的任何个人信息，无论您登陆或浏览上述网站是否基于本应用的链接或引导。
-<br><br>
-<b>二、社区管理条例</b>
-<br><br>
-<b>1）目的地或游记的删除原则</b>
-<br>
-凡符合下列任何情况的目的地内容或游记，都将被径行删除或经举报后被删除：
-<br>
-&nbsp;&nbsp;&nbsp;1.含有色情、暴力、恐怖、不文明内容
-<br>
-&nbsp;&nbsp;&nbsp;2.具有广告性质
-<br>
-&nbsp;&nbsp;&nbsp;3.含有反动内容
-<br>
-&nbsp;&nbsp;&nbsp;4.含有人身攻击内容
-<br>
-&nbsp;&nbsp;&nbsp;5.含有违背伦理道德内容
-<br><br>
-<b>2）相应处罚方法：</b>
-<br>
-&nbsp;&nbsp;&nbsp;1.编写目的地内容、编写游记、回复游记，因为违反本应用协议被删除后， 管理员会视情节轻重对用户进行扣分。
-<br>
-&nbsp;&nbsp;&nbsp;2.由于游记被删除而导致的相应评论删除不单独扣分。
-<br>
-&nbsp;&nbsp;&nbsp;3.违规情节格外严重者，将酌情对其进行加倍扣分，有限期封禁帐号、IP，永久封禁帐号、IP等不同形式的处罚。
-<br><br>
-<b>3）对帐号的管理原则：</b>
-<br>
-凡含有下列行为之一者，携程攻略社区有权在接到投诉或举报后删除其相应帐号：
-<br>
-&nbsp;&nbsp;&nbsp;1.模仿携程攻略社区管理人员ID，用以假冒管理人员或破坏管理人员形象
-<br>
-&nbsp;&nbsp;&nbsp;2.模仿或盗用他人ID
-<br>
-&nbsp;&nbsp;&nbsp;3.个人签名包含有严重影响网友浏览的内容或格式
-<br>
-&nbsp;&nbsp;&nbsp;4.其他被投诉或举报为不恰当的情况
-<br><br>
-<b>三、本应用用户协议的修改</b>
-<br><br>
-本应用有权随时修改《用户协议》的任何条款，一旦《用户协议》的内容发生变动，本应用将会直接在本应用网站上公布修改之后的《用户协议》，该公布行为视为本应用已经通知您修改内容。本应用也可通过其他适当方式向用户提示修改内容。如果您不同意本应用对本《用户协议》相关条款所做的修改，您有权停止使用本应用服务。如果您继续使用本应用服务，则视为您接受本应用对本协议相关条款所做的修改。
-</body></html>
+<pre>
+总则
+　　用户在接受本应用服务之前，请务必仔细阅读本条款并同意本声明。
+
+　　用户直接或通过各类方式（如站外API引用等）间接使用本应用服务和数据的行为，都将被视作已无条件接受本声明所涉全部内容；若用户对本声明的任何条款有异议，请停止使用本应用所提供的全部服务。
+第一条
+　　用户以各种方式使用本应用服务和数据（包括但不限于发表、宣传介绍、转载、浏览及利用本应用或本应用用户发布内容）的过程中，不得以任何方式利用本应用直接或间接从事违反法律、以及社会公德的行为，且用户应当恪守下述承诺：
+
+　　1. 发布、转载或提供的内容符合本应用发布区域国家法律、社会公德；
+　　2. 不得干扰、损害和侵犯本应用的各种合法权利与利益；
+　　3. 遵守本应用以及与之相关的网络服务的协议、指导原则、管理细则等；
+
+　　本应用有权对违反上述承诺的内容予以删除。
+第二条
+　　1. 本应用仅为用户发布的内容提供存储空间，本应用不对用户发表、转载的内容提供任何形式的保证：不保证内容满足您的要求，不保证本应用的服务不会中断。因网络状况、通讯线路、第三方网站或管理部门的要求等任何原因而导致您不能正常使用本应用，本应用不承担任何法律责任。
+
+　　2. 用户在本应用发表的内容（包含但不限于本应用目前各产品功能里的内容）仅表明其个人的立场和观点，并不代表本应用的立场或观点。作为内容的发表者，需自行对所发表内容负责，因所发表内容引发的一切纠纷，由该内容的发表者承担全部法律及连带责任。本应用不承担任何法律及连带责任。
+
+　　3. 用户在本应用发布侵犯他人知识产权或其他合法权益的内容，本应用有权予以删除，并保留移交司法机关处理的权利。
+
+　　4. 个人或单位如认为本应用上存在侵犯自身合法权益的内容，应准备好具有法律效应的证明材料，及时与本应用取得联系，以便本应用迅速做出处理。
+附则
+　　对本协议的解释、修改及更新权均属于本应用所有。
+</pre>
+</body>
+</html>
