--- a/rule.html
+++ b/rule.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html><head>
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>《用户协议》</title>
 </head>
