--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="https://itunes.apple.com/app/guai-wu-dan-zhu-shou-ce/id963056590">
                 <img src="images/global-apple-store-badge@2x.png" width="154" height="45.5" alt="Go to the App Store"/>
             </a>
-            <a href="http://molon.u.qiniudn.com/gwdzsc1.0.0_.apk">
+            <a href="http://molon.u.qiniudn.com/mshandbook1.0.0.apk">
                 <img src="images/global-google-play-badge@2x.png" width="154" height="45.5" alt="Go to the Google Play"/>
             </a>
         </div>
