--- a/notice_tw.html
+++ b/notice_tw.html
@@ -35,10 +35,7 @@
         <div style="margin-top:30px;font-family:fantasy">
             <p>丟飯手冊 For 怪物彈珠</p>
             <p>小寶貝們，難道妳們忘了今天是愚人節麼？(*>﹏<*)</p>
-            <p>不過呢，國服微信公眾號上會在今晚12點會對今天的維護進行補償8888寶珠</p>
-            <p>不確定是不是愚人節的忽悠。</p>
-            <p>到時請註意關註，在下如果到時沒睡的話會提醒各位，如果睡了只能對不住各位了，哈哈。:)</p>
-            <p>QQ群號: 24869589</p>
+            <p>原諒我這個逗比吧。。。</p>
         </div>
     </center>
 </body>
