--- a/notice_cn.html
+++ b/notice_cn.html
@@ -38,6 +38,7 @@
             <p>不过呢，国服微信公众号上会在今晚12点会对今天的维护进行补偿8888宝珠</p>
             <p>不确定是不是愚人节的忽悠。</p>
             <p>到时请注意关注，在下如果到时没睡的话会提醒各位，如果睡了只能对不住各位了，哈哈。:)</p>
+            <p>借此顺便告诉各位，手册安卓版本已经发布，可以提醒小伙伴们前往diufan.com下载。</p>
             <p>QQ群号: 24869589</p>
         </div>
     </center>
