--- a/notice_tw.html
+++ b/notice_tw.html
@@ -36,6 +36,7 @@
             <p>丟飯手冊 For 怪物彈珠</p>
             <p>小寶貝們，難道妳們忘了今天是愚人節麼？(*>﹏<*)</p>
             <p>原諒我這個逗比吧。。。</p>
+            <p>借此順便告訴各位，手冊安卓版本已經發布，可以提醒小夥伴們前往diufan.com下載。:)</p>
         </div>
     </center>
 </body>
