+安卓下载两种方式

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <title>怪物弹珠手册</title>
+    <title>怪物彈珠手冊</title>
     <meta name="apple-itunes-app" content="app-id=963056590" affiliate-data="11lLuB">
     <meta name="baidu-site-verification" content="HCr0fLSwiE" />
-    <meta name="keywords" content="怪物弹珠,怪物弹珠攻略,怪物弹珠图鉴,怪弹手册,丢饭手册,怪物弹珠手册,丢饭手册 For 怪物弹珠" />
+    <meta name="keywords" content="怪物弹珠,怪物弹珠攻略,怪物弹珠图鉴,怪弹手册,丢饭手册,怪物弹珠手册,丢饭手册 For 怪物弹珠,怪物彈珠,怪物彈珠攻略,怪物彈珠圖鑒,怪彈手冊,丟飯手冊,怪物彈珠手冊,丟飯手冊 For 怪物彈珠" />
     <link href="favicons/favicon_180.png" rel="shortcut icon">
+    <link rel="stylesheet" href="jquery/jquery-ui.css">
+  <script src="jquery/jquery-1.10.2.js"></script>
+  <script src="jquery/jquery-ui.js"></script>
     <style type="text/css">
     body { margin:0; padding:0; }
     a {
@@ -30,20 +33,70 @@
         font-size: .65em;
         font-weight: 600;
     }
+
+    .no-close .ui-dialog-titlebar-close {
+        display: none;
+    }
+    .no-close .ui-dialog-titlebar{
+        display: none;
+    }
+    .no-close .ui-widget{
+        font-size: .65em;
+        font-weight: 600;
+    }
+    .no-close .ui-widget-content{
+        border: 0px;
+        background: #EFEFEF;
+    }
+    .no-close .ui-dialog-buttonpane
+    {
+        margin-top: 0;
+        padding: 0 0 0 0;
+    }
+    div#dialog {
+        font-size: .65em;
+        font-weight: 600;
+    }
     </style>
+    <script>
+      $(function() {
+        $( "#dialog" ).dialog({
+          dialogClass: "no-close",
+          autoOpen: false,
+          resizable: false,
+          height:115,
+          modal: true,
+          buttons: {
+            "前往GooglePlay": function() {
+                window.location = "https://play.google.com/store/apps/details?id=com.zz.dz";
+            },
+            "直接下載安裝": function() {
+                window.location = "mshandbook1.0.0.apk";
+            }
+          }
+        });
+     
+        $( "#opener" ).click(function() {
+          $( "#dialog" ).dialog( "open" );
+        });
+      });
+  </script>
 </head>
 <body style="background-color: rgba(250, 250, 250, 1);">
+    <div id="dialog" style="text-align: center;">
+      <p>由於壹些用戶無法使用GooglePlay下載，所以提供兩種安裝方式，請自行根據需要選擇。:)</p>
+    </div>
     <center>
         <div style="margin-top:30px;font-family:fantasy">
-            <p>丢饭手册 For 怪物弹珠</p>
+            <p>丟飯手冊 For 怪物彈珠</p>
         </div>
         <div>
             <a href="https://itunes.apple.com/app/guai-wu-dan-zhu-shou-ce/id963056590">
                 <img src="images/global-apple-store-badge@2x.png" width="154" height="45.5" alt="Go to the App Store"/>
             </a>
-            <a href="mshandbook1.0.0.apk">
-                <img src="images/global-google-play-badge@2x.png" width="154" height="45.5" alt="Go to the Google Play"/>
-            </a>
+            <!-- <a href="mshandbook1.0.0.apk"> -->
+                <img id="opener" style="cursor:pointer" src="images/global-google-play-badge@2x.png" width="154" height="45.5" alt="Go to the Google Play"/>
+            <!-- </a> -->
         </div>
         <div id="followUs">
             <p>
