加安卓下载随机数，防止APK缓存

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 window.location = "https://play.google.com/store/apps/details?id=com.zz.dz";
             },
             "直接下載安裝": function() {
-                window.location = "mshandbook1.0.0.apk";
+                window.location = "mshandbook1.0.0.apk?" + Date.parse(new Date());
             }
           }
         });
