把视频iframe限制大小去掉

--- a/jp_coop.html
+++ b/jp_coop.html
@@ -13,7 +13,7 @@
 <body style="background-color: rgba(250, 250, 250, 1);">
     <center>
         <div style="margin-top:30px;font-family:fantasy">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TVC55n54RJ4" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/TVC55n54RJ4" frameborder="0" allowfullscreen></iframe>
         </div>
     </center>
 </body>
