--- a/cn_coop.html
+++ b/cn_coop.html
@@ -2,7 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta content="telephone=no" name="format-detection">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>怪物弹珠手册 如何募集伙伴</title>
     <meta name="keywords" content="怪物弹珠,怪物弹珠攻略,怪物弹珠图鉴,怪弹手册,丢饭手册,怪物弹珠手册,丢饭手册 For 怪物弹珠" />
     <link href="favicons/favicon_180.png" rel="shortcut icon">
@@ -13,7 +17,7 @@
 <body style="background-color: rgba(250, 250, 250, 1);">
     <center>
         <div style="margin-top:30px;font-family:fantasy">
-            <iframe height=498 width=510 src="http://player.youku.com/embed/XNDY2MjM4NTcy" frameborder=0 allowfullscreen></iframe>
+            <iframe src="http://player.youku.com/embed/XOTI2Njk4NzQ4" frameborder=0 allowfullscreen></iframe>
         </div>
     </center>
 </body>
