--- a/notice.html
+++ b/notice.html
@@ -33,9 +33,9 @@
 <body style="background-color: rgba(250, 250, 250, 1);">
     <center>
         <div style="margin-top:30px;font-family:fantasy">
-            <p>丢饭手册 For 怪物弹珠</p>
-            <p>国服幕府在即，人气回流，大家可加QQ群一起交流心得。</p>
-            <p>QQ群号: 24869589</p>
+            <p>丟飯手冊 For 怪物彈珠</p>
+            <p>iOS8.3用戶請勿使用側滑出各種彈出頁面，切記，下個版本會修正此BUG。</p>
+            <p>希望各位把我們的小寶典介紹給小夥伴哦！這樣在下會更有動力陸續加新東西上來的。Fighting!</p>
         </div>
     </center>
 </body>
