--- a/notice.html
+++ b/notice.html
@@ -34,7 +34,7 @@
     <center>
         <div style="margin-top:30px;font-family:fantasy">
             <p>丟飯手冊 For 怪物彈珠</p>
-            <p>iOS8.3用戶請勿使用側滑出各種彈出頁面，切記，下個版本會修正此BUG。</p>
+            <p>iOS8.3用戶請勿使用側滑方式打開關閉各種彈出頁面(點擊按鈕打開和關閉是OK的)，切記，下個版本會修正此BUG。</p>
             <p>希望各位把我們的小寶典介紹給小夥伴哦！這樣在下會更有動力陸續加新東西上來的。Fighting!</p>
         </div>
     </center>
