--- a/notice_jp_coop.html
+++ b/notice_jp_coop.html
@@ -34,7 +34,7 @@
     <center>
         <div style="margin-top:30px;font-family:fantasy">
             <p>丟飯手冊 For 怪物彈珠</p>
-            <p>玩日服的小夥伴們，請在募集列表頁面點擊左上角篩選按鈕，然後選擇日服，會看到壹堆新募集信息可以用哦！</p>
+            <p>玩日服的小夥伴們，請在募集列表頁面點擊左上角篩選按鈕，然後選擇日服，會看到壹大堆最新的募集信息可以用哦！</p>
             <p>再次感謝各位支持，覺得好用壹定要介紹給小夥伴們哦！</p>
         </div>
     </center>
