--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                 window.location = "https://play.google.com/store/apps/details?id=com.zz.dz";
             },
             "直接下載安裝": function() {
-                window.location = "mshandbook2.0.0.apk?" + Date.parse(new Date());
+                // window.location = "mshandbook2.0.0.apk?" + Date.parse(new Date());
+                window.location = "http://apk.91.com/soft/Controller.ashx?Action=Download&id=41504063&m=5c06316ab332154330afaa095ab86c7b";
             },
             "取消": function(){
                 $(this).dialog('close');
