--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <p>丟飯手冊 For 怪物彈珠</p>
         </div>
         <div>
-            <a id="install_ios" href="https://itunes.apple.com/app/guai-wu-dan-zhu-shou-ce/id963056590">
+            <a id="install_ios" href="https://itunes.apple.com/app/apple-store/id963056590?pt=5819800&ct=diufan&mt=8">
                 <img src="images/global-apple-store-badge@2x.png" width="154" height="45.5" alt="Go to the App Store"/>
             </a>
             <img id="install_android" style="cursor:pointer" src="images/global-google-play-badge@2x.png" width="154" height="45.5" alt="Go to the Google Play"/>
