国服视频放优酷

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     $(this).dialog('close');
                 }
               };
-
+            $("#youtube").attr("src","http://player.youku.com/embed/XOTUzOTI5NDA0");
             // $( "#v_png" ).attr("poster","videos/screenshot_cn.png");
             // $( "#v1_mp4" ).attr("src","videos/screenshot_cn@2x.mp4");
             // $( "#v2_mp4" ).attr("src","videos/screenshot_cn@2x.mp4");
