--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         }
 
         var google_url = "https://play.google.com/store/apps/details?id=com.zz.dz";
-        var apk_url = "http://apk.91.com/soft/Controller.ashx?Action=Download&id=41504063&m=5c06316ab332154330afaa095ab86c7b";
+        var apk_url = "http://www.apk.anzhi.com/data3/apk/201505/14/0f98ba7e9258a06b0dc0d91d3184f86c_06160200.apk";
 
         var atog_tips = "您是Android系統哦，請點擊GooglePlay按鈕";
         var itoa_tips = "您是iOS系統哦，請點擊AppStore按鈕";
