--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         }
 
         var google_url = "https://play.google.com/store/apps/details?id=com.zz.dz";
-        var apk_url = "http://www.apk.anzhi.com/data3/apk/201511/18/8797dbde71c771f1e39b7bd248ba1c24_71467700.apk";
+        var apk_url = "http://m.baidu.com/api?action=redirect&token=mumayi&from=1009556h&dltype=new&tj=soft_8427660_1450542_%E6%80%AA%E7%89%A9%E5%BC%B9%E7%8F%A0%E6%89%8B%E5%86%8C&blink=b71c687474703a2f2f612e67646f776e2e62616964752e636f6d2f646174612f7769736567616d652f646332303765633762303661643862362f67756169777564616e7a687573686f7563655f31302e61706b3f66726f6d3d61313130317356&crversion=1&potl=https";
 
         var atog_tips = "您是Android系統哦，請點擊GooglePlay按鈕";
         var itoa_tips = "您是iOS系統哦，請點擊AppStore按鈕";
