修改用户协议

--- a/rule.html
+++ b/rule.html
@@ -25,6 +25,11 @@
 　　2. 用户在本应用发表的内容（包含但不限于本应用目前各产品功能里的内容）仅表明其个人的立场和观点，并不代表本应用的立场或观点。作为内容的发表者，需自行对所发表内容负责，因所发表内容引发的一切纠纷，由该内容的发表者承担全部法律及连带责任。本应用不承担任何法律及连带责任。
 　　3. 用户在本应用发布侵犯他人知识产权或其他合法权益的内容，本应用有权予以删除，并保留移交司法机关处理的权利。
 　　4. 个人或单位如认为本应用上存在侵犯自身合法权益的内容，应准备好具有法律效应的证明材料，及时与本应用取得联系，以便本应用迅速做出处理。
+　　5. 本应用有权在任何时候，修改或暂停、终止本平台全部或部分服务，对此用户可以理解和接受。
+　　6. 本应用有权在任何时候修改内购服务的定价，用户不得存有异议。
+　　7. 本应用内容仅供参考，不做为任何行为的指导和建议。
+　　8. 本应用可能因合作方或相关电信部门的互联网软硬件设备故障或失灵、或人为操作疏忽而全部或部分中断、延迟、遗漏、误导或造成资料传输或储存上的错误、或遭第三人侵入系统篡改或伪造变造资料等，对此用户同意理解和接受。
+　　9. 本应用可能因黑客攻击、计算机病毒侵入或发作、政府管制而造成的暂时性关闭，或因前述原因以及与本网站链接的其它网站原因导致个人资料泄露、丢失、被盗用或被篡改等，对此用户同意理解和接受。
 附则
 　　对本协议的解释、修改及更新权均属于本应用所有。
 </pre>
