隐私协议优化

--- a/rule.html
+++ b/rule.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html><head>
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>《用户协议》</title>
-</head>
-<body>
-<div style="text-align:center"><b>用户协议</b></div>
-<pre>
-总则
+<!-- saved from url=(0045)https://m.laike.ai/native/static/privacy.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  
+  <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
+  <title>隐私协议</title>
+ <script src="./隐私协议_files/zepto.min.js"></script>
+  <!-- _build:js scripts/native.min.js -->
+  <script src="./隐私协议_files/utils.js"></script>
+  <style>#message { font-size: 14px; }</style>
+  <!-- end_build -->
+
+  <script>_.constants.domain = 'https://api.laike.ai/';_.constants.appId = 'wxe81796c7462241ba';</script>
+<style type="text/css">#yddContainer{display:block;font-family:Microsoft YaHei;position:relative;width:100%;height:100%;top:-4px;left:-4px;font-size:12px;border:1px solid}#yddTop{display:block;height:22px}#yddTopBorderlr{display:block;position:static;height:17px;padding:2px 28px;line-height:17px;font-size:12px;color:#5079bb;font-weight:bold;border-style:none solid;border-width:1px}#yddTopBorderlr .ydd-sp{position:absolute;top:2px;height:0;overflow:hidden}.ydd-icon{left:5px;width:17px;padding:0px 0px 0px 0px;padding-top:17px;background-position:-16px -44px}.ydd-close{right:5px;width:16px;padding-top:16px;background-position:left -44px}#yddKeyTitle{float:left;text-decoration:none}#yddMiddle{display:block;margin-bottom:10px}.ydd-tabs{display:block;margin:5px 0;padding:0 5px;height:18px;border-bottom:1px solid}.ydd-tab{display:block;float:left;height:18px;margin:0 5px -1px 0;padding:0 4px;line-height:18px;border:1px solid;border-bottom:none}.ydd-trans-container{display:block;line-height:160%}.ydd-trans-container a{text-decoration:none;}#yddBottom{position:absolute;bottom:0;left:0;width:100%;height:22px;line-height:22px;overflow:hidden;background-position:left -22px}.ydd-padding010{padding:0 10px}#yddWrapper{color:#252525;z-index:10001;background:url(chrome-extension://ibogfemlnclpecapkojhmanpiebldbnk/ab20.png);}#yddContainer{background:#fff;border-color:#4b7598}#yddTopBorderlr{border-color:#f0f8fc}#yddWrapper .ydd-sp{background-image:url(chrome-extension://ibogfemlnclpecapkojhmanpiebldbnk/ydd-sprite.png)}#yddWrapper a,#yddWrapper a:hover,#yddWrapper a:visited{color:#50799b}#yddWrapper .ydd-tabs{color:#959595}.ydd-tabs,.ydd-tab{background:#fff;border-color:#d5e7f3}#yddBottom{color:#363636}#yddWrapper{min-width:250px;max-width:400px;}</style></head>
+
+<body style="">
+  <div style="text-align:center"><b>隐私协议</b></div>
+  <pre style="white-space: pre-wrap;word-wrap: break-word;">
 　　用户在接受本应用服务之前，请务必仔细阅读本条款并同意本声明。
 
 　　用户直接或通过各类方式（如站外API引用等）间接使用本应用服务和数据的行为，都将被视作已无条件接受本声明所涉全部内容；若用户对本声明的任何条款有异议，请停止使用本应用所提供的全部服务。
@@ -33,5 +41,9 @@
 附则
 　　对本协议的解释、修改及更新权均属于本应用所有。
 </pre>
-</body>
-</html>
+  <script type="text/javascript" src="./隐私协议_files/urlConf.js"></script>
+  <script type="text/javascript" src="./隐私协议_files/starts.js"></script>
+
+
+
+</body></html>
